# osus

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  build.bat  build.sh  lesgo.sh  run_desktop.sh  run_web.sh
beatmaps/: BeautifulWorld.osu  InitialD.osu  audio.mp3:Zone.Identifier  deneme.osu  llvl.osu  nottakumi.osu  nvg.osu  padoru.osu  tripoloski.osu  wr1.osu
include/: Event.h  Game.h  GameFile.h  GameManager.h  HitObject.h  HitObjectData.h  Parser.h  TimingPoint.h
resources/beatmaps/: BeautifulWorld.osu  Toby Fox - MEGALOVANIA (Kyshiro).osb  chekibreki.osu  faik.osu  gravitymakesthingsfall.osu  joker.osu  linearcurve.osu  megolonavya.osu  redo.osu  swing.osu  trava.osu  tripoloski.osu  wr1.osu
resources/skin/: skin.ini
src/: Game.cpp  GameManager.cpp  HitObject.cpp  Parser.cpp  main.cpp
